re-added routing

--- a/success.html
+++ b/success.html
@@ -112,7 +112,7 @@
         const hostName = window.location.hostname;
         const port = window.location.port;
         const homePage = `${protocol}//${hostName}:${port}/index.html`;
-        // window.location.replace(homePage);
+        window.location.replace(homePage);
       };
     </script>
   </body>
