--- a/success.html
+++ b/success.html
@@ -104,7 +104,7 @@
     </div>
     <script>
       const goBackHome = function (e) {
-        e.classList.toggle("active");
+        e.classList.add("active");
         setTimeout(() => {
           e.classList.remove("active");
         }, 1000);
