--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
               title="Must contain only alphabets"
               required
             />
+            <label for="firstName" class="Input__Label"
+              >Please enter your first name</label
+            >
             <img src="./images/icon-error.svg" alt="error-icon" />
             <i>First Name cannot be empty</i>
           </div>
@@ -68,6 +71,9 @@
               autocomplete="off"
               required
             />
+            <label for="lastName" class="Input__Label"
+              >Please enter your last name</label
+            >
             <img src="./images/icon-error.svg" alt="error-icon" />
             <i>Last Name cannot be empty</i>
           </div>
@@ -80,6 +86,9 @@
               autocomplete="off"
               required
             />
+            <label for="email" class="Input__Label"
+              >Please enter your email address</label
+            >
             <img src="./images/icon-error.svg" alt="error-icon" />
             <i>Looks like this is not an email</i>
           </div>
@@ -91,6 +100,9 @@
               placeholder="Password"
               required
             />
+            <label for="password" class="Input__Label"
+              >Please enter your password</label
+            >
             <img src="./images/icon-error.svg" alt="error-icon" />
             <i>Password cannot be empty</i>
           </div>
